--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,5 @@
-== README
+== Rails 4.2.3 regression demonstration
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This project demonstrates a regression in Rails 4.2.3 that I found I upgraded from 4.1.6.
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+See the issue here: https://github.com/rails/rails/issues/20863
